<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:srcCompat="@drawable/ic_modric_image" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview_text"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="@+id/imageView1" />

    <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview_text"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_text"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

    <EditText
        android:id="@+id/editTextTextDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/details_text"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextName" />

    <Button
        android:id="@+id/buttonInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/input_text"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextDetails"
        app:layout_constraintStart_toStartOf="@+id/editTextTextDetails"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextDetails" />

    <EditText
        android:id="@+id/editTextNumberHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/height_text"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextDetails"
        app:layout_constraintStart_toStartOf="@+id/editTextTextDetails"
        app:layout_constraintTop_toBottomOf="@+id/buttonInput" />

    <EditText
        android:id="@+id/editTextNumberWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/weight_text"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberHeight"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberHeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberHeight" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_text"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberWeight"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberWeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberWeight" />
</androidx.constraintlayout.widget.ConstraintLayout>